mini/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini
spec:
  type: NodePort
  selector:
    app: mini
  ports:
    - port: 8080
