mini/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mini
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mini.local
    http:
      paths:
      - path: /
        backend:
          serviceName: mini
          servicePort: 8080
